fixed container alignment

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -10,7 +10,7 @@
        height: 591px;
        position: absolute;
        top: 121px;
-       left: 276px;
+       left: 287px;
      }
      
      
@@ -22,8 +22,9 @@
        height: 91px;
        position: absolute;
        top: 620px;
-       left: 0px;
+       left: 11px;
      }
+     /* check box container*/
      div .checkbox.checkbox-1 {
        margin: 0px 0px 5px 40px;
        color: #5b452d;
@@ -45,7 +46,7 @@
        height: 500px;
        position: absolute;
        top: 120px;
-       left: 0px;
+       left: 11px
      }
      #absolute-wrapper {
        position: relative;
